# csc317_showcase

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
.cache/clangd/index/: AlignedBox.h.E53385E3D11A75CE.idx  AngleAxis.h.FA6B5DCFB88624C8.idx  ArithmeticSequence.h.21E4B80EBF144CE9.idx  Array.h.C1023C300E5092F2.idx  ArrayBase.h.CE9DAA6E55BA9C8F.idx  ArrayCwiseBinaryOps.h.16A1E3D50038D73A.idx  ArrayCwiseUnaryOps.h.B4B4F22AAA3E28E4.idx  ArrayWrapper.h.F1C5D3A203A569A9.idx  Assign.h.78F0FEAFFD1DCF81.idx  AssignEvaluator.h.C11299E5F1CA4B99.idx  AssignmentFunctors.h.658B59D15C064E09.idx  BDCSVD.h.21F52C4F8A7C367A.idx  BFloat16.h.9CE303D3799E7ED5.idx  BandMatrix.h.9465220E95EA34D3.idx  BinaryFunctors.h.25256767CEB15D17.idx  BlasUtil.h.0178DC47E4C3EC7A.idx  Block.h.C5446A5A1B2C6EEB.idx  BlockHouseholder.h.E43AE585C2FF7647.idx  BlockMethods.h.00BECFC0B30413E6.idx  BooleanRedux.h.7C738A14E984640C.idx  Camera.h.15A8A3FBF9AE2445.idx  Cholesky.9F6ACC5BD8927D6C.idx  ColPivHouseholderQR.h.063124703ED5A163.idx  CommaInitializer.h.3B7672C1A338E500.idx  CommonCwiseBinaryOps.h.48FBF423D8AC4A2D.idx  CommonCwiseUnaryOps.h.6C0EC687AB0A304C.idx  CompleteOrthogonalDecomposition.h.F33610CEE72B6BCA.idx  Complex.h.446965C9DED19E68.idx  ComplexEigenSolver.h.38D4449D0F4645F8.idx  ComplexSchur.h.DD8E03F3B667C17B.idx  ConditionEstimator.h.3B1BBF90F5C30FE6.idx  ConfigureVectorization.h.EED76CACF59A60D6.idx  ConjHelper.h.6483E68E9BC7DB5D.idx  Constants.h.6B9B31229C0203E3.idx  Core.22BDC87B9C304A4E.idx  CoreEvaluators.h.5367481EA3315E5D.idx  CoreIterators.h.07144B86B3072E1A.idx  CwiseBinaryOp.h.1A4ECE459F44DE06.idx  CwiseNullaryOp.h.77E8421A5F6C0DF1.idx  CwiseTernaryOp.h.59DB07E92E79B78F.idx  (+217 more)
data/: bunny.json  inside-a-sphere.json
include/: Triangle.h  TriangleSoup.h  mesh_builders.h  mesh_types.h
src/a3a5/: PointLight.cpp  Triangle.cpp  TriangleSoup.cpp  blinn_phong_shading.cpp  catmull_clark.cpp  creative.json  first_hit.cpp  raycolor.cpp  reflect.cpp  triangle_area_normal.cpp  vertex_triangle_adjacency.cpp  viewing_ray.cpp  write_obj.cpp  write_ppm.cpp
src/mesh/: mesh_builders.cpp
